--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,7 +10,9 @@
     margin: auto;
     width: 500px;
 }
-
+.div2 img{
+    height: 130px;
+}
 .inner{
     text-align: center;
     font-size: 40px;
