--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,15 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
+<div class="footer">
+  <div class="icons">
+    <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+    <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+  </div>
+<div class="content">
+    <p>Feedback us: vinod@olive.net</p>
+    <p>Write us: olive.net</p>
+</div>
+  
+  </div>
